<resources>
    <string name="app_name">Устройство автомобиля</string>
    <string name="kpp_1">
        "\t" Автомобильная трансмиссия – это комплекс устройств, передающих крутящий момент от
        коленвала двигателя на ведущие колёса. Помимо просто передачи, трансмиссия может
        изменять его значение, направление и распределение.
    </string>
    <string name="kpp_2">
        "\t" Рассмотрим, благодаря чему усилие, родившееся в недрах двигателя, попадает на колёса автомобиля.
        Основные узлы трансмиссии – это сцепление, КПП, карданная передача, дифференциал, ШРУСы.
    </string>
    <string name="kpp_3">
        "\t" Задача сцепления – создать легко размыкаемую связь между двигателем и следующим элементом трансмиссии.
        При переключении передач сцепление отключает мотор от КПП, чтобы уберечь механизмы от резких нагрузок.
        Затем эта связь восстанавливается. Конструкция сцепления позволяет проделывать это раз за разом, без
        лишних усилий со стороны водителя.
    </string>
    <string name="kpp_4">
        "\t" Независимо от типа («автомат», «механика», «робот», «вариатор») назначение у всех КПП одинаковое:
        изменяя передаточное число, менять силу и направление крутящего момента. Таким образом, двигатель работает
        в одном режиме, без постоянного ускорения и замедления, а автомобиль движется с такой скоростью, которая
        нужна водителю. "\n"

        "\t" Также коробка передач переключает движение на задний ход или вообще разрывает связь двигателя остальных
        элементов трансмиссии. Но если сцепление предназначено для размыкания этой связи на короткий срок, КПП
        может стоять на нейтральной передаче долгое время.
    </string>
    <string name="fuel_1">
        "\t" Главная функция любой топливной системы – это подача необходимого количества топлива из бака в
        камеру сгорания в определенный момент времени. Функционально она разделяется на две основных системы: "\n"
        "\n"
        • транспортировка топлива, его фильтрация и создание давления в системе – выполняется механическими
        и гидравлическими устройствами; "\n"
        • расчет количества и момента впрыска топлива, а также распределение его по цилиндрам –
        осуществляется электронными устройствами. "\n"
        "\n"

        В состав топливной системы входят следующие элементы: "\n"
        "\n"
        • Бак – герметичная емкость для хранения топлива."\n"
        • Трубопроводы (прямой и обратный) – трубки и гибкие шланги, по которым осуществляется
        транспортировка топлива. "\n"
        • Фильтры (грубой и тонкой очистки) – выполняют очистку от механических загрязнений. "\n"
        • Регулятор давления – необходим для обеспечения заданного уровня давления. "\n"
        • Насос – как правило, погружной, приводимый в движение электродвигателем. "\n"
        • ТНВД – для систем непосредственного впрыска (дизельных двигателей)."\n"
        • Топливные форсунки."\n"

    </string>
    <string name="fuel_2">
        "\t" Главная особенность топливной системы этого типа — наличие карбюратора, в котором производится
        смешивание воздуха и топлива, то есть образование топливно-воздушной смеси. Карбюратор устанавливается
        на впускном коллекторе двигателя, к нему подводится топливо, которое распыляется с помощью жиклера
        и смешивается с воздухом. Образовавшаяся смесь через дроссельную заслонку подается в коллектор
        (а через него — к цилиндрам), а управлением положения заслонки осуществляется управление работой двигателя. "\n"

        "\t" В системе подачи топлива карбюраторных двигателей бензонасос создает малое давление, которое необходимо
        лишь для закачки топлива из бака в карбюратор, а подача горючей смеси в цилиндр осуществляется «самотеком»
        из-за понижения давления в цилиндре при опускании поршня. "\n"

    </string>
    <string name="fuel_3">
        "\t" Система подачи топлива инжекторных двигателей имеет следующие принципиальные отличия от топливной системы карбюраторных моторов: "\n"
        "\n"
        - Топливо из бака подается на топливную рампу, к которой подключены форсунки; "\n"
        - Воздух в камеры сгорания подается через дроссельный узел; "\n"
        - Топливный насос создает достаточно высокое давление, которое необходимо для обеспечения впрыска топлива форсунками в камеры сгорания. "\n"
        "\n"
        "\t" Также в системах впрыска обязательно присутствует блок управления, который как раз и управляем впрыском, в зависимости от режима работы обеспечивает необходимый состав топливно-воздушной смеси и т.д. "\n"
        "\t" Существует два основных типа инжекторных двигателей: "\n"
        "\n"
        - Моновпрыск (одна форсунка на все цилиндры, сейчас почти не используется); "\n"
        - Распределенный впрыск (индивидуальная форсунка для каждого цилиндра, существует несколько разновидностей, отличающихся режимом работы форсунок). "\n"
        "\n"
        "\t" Принцип работы топливной системы инжекторного двигателя прост.
        Топливо из бака с помощью насоса подается на топливную рампу, в
        которой топливо всегда находится под постоянным высоким давлением
        (давление устанавливается регулятором давления). С рампой сообщаются форсунки,
        через которые топливо в определенные промежутки времени распыляется в камере сгорания.
        Одновременно с подачей топлива в камеру сгорания поступает и воздух — здесь происходит
        образование топливно-воздушной смеси. Форсунки управляются блоком управления, информация
        о режимах работы всей системы поступает от множества датчиков.
    </string>
    <string name="engine_1">

        "\t" Устройство двигателяДвигатель – энергосиловая машина, преобразующая какой-либо вид энергии в
        механическую работу. Еще двигатель называют "мотором", что было позаимствовано из немецкого языка.
        Различают различные типы двигателей из которых широкое распространение получили двигатели внутреннего
        сгорания и электрические двигатели. Существует более подробная классификация двигателей внутреннего сгорания.

    </string>
    <string name="engine_2">
        "\t" Устройство двигателя внутреннего сгорания состоит из двух механизмов: "\n"

        "\t" 1) Кривошипно-шатунного механизма (КШМ) - преобразует прямолинейное возвратно-поступательные
        движения поршней, воспринимающих давление газов, во вращательное движение коленчатого вала.
        Детали КШМ делят на две группы: подвижные детали КШМ и неподвижные детали КШМ. "\n"

        "\t" Подвижные детали КШМ: поршень , поршневой палец, шатун, коленчатый вал, маховик. "\n"

        "\t" Неподвижные детали КШМ: блок цилиндров, головка цилиндров, картер маховика и сцепления,
        гильзы цилиндров, крышка блока, крепежные детали, кронштейны, прокладки. "\n"

        "\t" 2) Газораспределительного механизма (ГРМ) - служит для своевременного открытия и закрытия впускных
        и выпускных клапанов двигателя, обеспечивая качественное наполнение цилиндров двигателя свежим зарядом,
        их очистку от отработавших газов и герметизацию цилиндров при сжатии и рабочем ходе поршня. "\n"
        "\n"
        "\t" Двигатель состоит также из пяти систем:
        - Система охлаждения - предназначена для поддержания оптимального теплового режима двигателя, чтобы он не перегревался и не переохлаждался.
        - Система смазки - служит для подвода масла к трущимся поверхностям деталей двигателя, частичного отвода теплоты и продуктов изнашивания.
        - Система питания - служит для приготовления горючей смеси из паров топлива и воздуха в определенных пропорциях, подачи ее в цилиндры двигателя и отвода из них отработавших газов.
        - Система зажигания - служит для создания тока высокого напряжения и распределения его по цилиндрам двигателя и воспламенения рабочей смеси в камере сгорания в определенные моменты.
        - Система пуска - служит для первоначального вращения коленчатого вала, что обеспечивает запуск двигателя.
    </string>
    <string name="engine_3">
        "\t" Из-за низкой производительности и высокого расхода топлива 2-тактных двигателей практически
        все современные двигатели производят с 4-тактными циклами работы: "\n"
        "\n"
        - Впуск топлива; "\n"
        - Сжатие топлива; "\n"
        - Сгорание; "\n"
        - Вывод отработанных газов за пределы камеры сгорания. "\n"
        "\n"
        "\t" Точка отсчета — положение поршня вверху (ВМТ — верхняя мертвая точка). В данный момент впускное
        отверстие открывается клапаном, поршень начинает движение вниз и засасывает топливную смесь в цилиндр.
        Это первый такт цикла. "\n"

        "\t" Во время второго такта поршень достигает самой нижней точки (НМТ — нижняя мертвая точка),
        при этом впускное отверстие закрывается, поршень начинает движение вверх, из-за чего топливная
        смесь сжимается. При достижении поршнем максимальной верхней точки топливная смесь сжата до максимума. "\n"

        "\t" Третий этап – это поджигание сжатой топливной смеси с помощью свечи, которая испускает искру.
        В результате горючий состав взрывается и толкает поршень с большой силой вниз. "\n"

        "\t" На заключительном этапе поршень достигает нижней границы и по инерции возвращается к верхней точке.
        В это время открывается выпускной клапан, отработанная смесь в виде газа выходит из камеры сгорания и
        через выхлопную систему попадает на улицу. После этого цикл, начиная с первого этапа, повторяется снова и
        продолжается в течение всего времени работы двигателя. "\n"

        "\t" Описанный выше способ является универсальным. По такому принципу построена работа практически всех
        бензиновых моторов. Дизельные двигатели отличаются тем, что там нет свеч зажигания – элемента, который
        поджигает топливо. Детонация дизельного топлива осуществляется благодаря сильному сжатию топливной смеси.
        При такте «впуск» в цилиндры дизеля поступает чистый воздух. Во время такта «сжатие» воздух нагревается до
        600О С. В конце этого такта в цилиндр впрыскивается определенная порция топлива, которое самовоспламеняется.
    </string>
</resources>