<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:paddingLeft="50px"
                android:text="Трансмиссия"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

            <TextView
                android:id="@+id/textViewContent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25px"
                android:paddingLeft="25px"
                android:paddingRight="25px"
                android:text="@string/kpp_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:paddingLeft="50px"
                android:paddingRight="50px"
                app:srcCompat="@drawable/transmissions" />
            <TextView
                android:id="@+id/textViewContent2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25px"
                android:paddingLeft="25px"
                android:paddingRight="25px"
                android:text="@string/kpp_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textViewContent3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:paddingLeft="50px"
                android:text="Сцепление"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/scepl" />

            <TextView
                android:id="@+id/textViewContent4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25px"
                android:paddingLeft="25px"
                android:paddingRight="25px"
                android:text="@string/kpp_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textViewContent5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:paddingLeft="50px"
                android:text="Коробка передач"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/schema_kpp" />

            <TextView
                android:id="@+id/textViewContent6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25px"
                android:paddingLeft="25px"
                android:paddingRight="25px"
                android:text="@string/kpp_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>