<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:paddingLeft="50px"
                android:text="Топливная система"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

            <TextView
                android:id="@+id/textViewContent1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25px"
                android:paddingLeft="25px"
                android:paddingRight="25px"
                android:text="@string/fuel_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:paddingLeft="50px"
                android:paddingRight="50px"
                app:srcCompat="@drawable/schema_fuel" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:paddingLeft="50px"
                android:text="Карбюраторная система подачи топлива"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <TextView
                android:id="@+id/textViewContent2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25px"
                android:paddingLeft="25px"
                android:paddingRight="25px"
                android:text="@string/fuel_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:paddingLeft="50px"
                android:text="Инжекторная система подачи топлива (система впрыска топлива)"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
            <TextView
                android:id="@+id/textViewContent3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="25px"
                android:paddingLeft="25px"
                android:paddingRight="25px"
                android:text="@string/fuel_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>